# ImageFilters

./: README.md
Clarendon_Filter/: CMakeLists.txt  Clarendon_Filter.cpp
Gingham_Filter/: CMakeLists.txt  Gingham_Filter.cpp
Image_Resize/: CMakeLists.txt  Resize.cpp
Lark_Filter/: CMakeLists.txt  Lark_Filter.cpp
Moon_Filter/: CMakeLists.txt  Moon_Filter.cpp
